--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /components/
 /bower_components/
 /test_scopes/angular_*/bower_components/
-/dist/
+# /dist/
 /demo/js/angular-translate-latest.js
 /build/
 /tmp
